--- a/docs/sass/helpers/_mixins.sass
+++ b/docs/sass/helpers/_mixins.sass
@@ -32,11 +32,9 @@ main
 .wrapper
 	width: 1280px
 	margin: 0 auto
-	padding-left: 2%
-	padding-right: 2%
 	text-align: center
 	@media (max-width: 1280px)
-		width: 100%
+		width: 96%
 
 section
 	overflow: hidden
