--- a/docs/sass/sections/_header.sass
+++ b/docs/sass/sections/_header.sass
@@ -6,7 +6,7 @@ header
 	right: 0
 	z-index: 60
 	background-color: $white-color
-	border-bottom: 1px solid #ccc
+	border-bottom: 0.15rem solid #ccc
 	> .wrapper
 		display: flex
 		justify-content: space-between
@@ -16,7 +16,7 @@ header
 			flex-direction: column
 			align-items: center
 		@media (max-width: 850px)
-			padding: 1rem
+			padding: 1rem 0
 			flex-direction: row
 			justify-content: flex-start
 		button#hamburger
